fixed text wrapping

--- a/music-find.css
+++ b/music-find.css
@@ -98,5 +98,4 @@ input[type=text] {
 .hint {
   font-family: 'Oxygen', sans-serif;
   color: #697480;
-  max-width: 50%;
 }
